sign in/sign up forms and css

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,12 @@
 <form method="post" action="/login">
-    <label>Email
-        <input type="text" name="email">
-        </label>
-    <label>Password
-        <input type="password" name="password">
-        </label>
-    <input type="submit" value="Sign in">
+    <h1>Sign in</h1>
+    <div>
+       <input type="text" name="email" placeholder="Email">
+    </div>
+    <div>
+        <input type="password" name="password" placeholder="Password">
+    </div>
+    <input id="submit" type="submit" value="Sign in">
+    <a href="/register">Not registered yet?</a>
 </form>
-<a href="/register">Not registered yet?</a>
+
