--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,86 @@
-body{
-    background-color: rgb(251, 150, 192);
+body {
+    background-color: rgb(150, 216, 251);
+    text-align: center;
 }
-h1{
-    color: rgb(183, 234, 27);
+
+nav {
+    margin-left: -8px;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    text-align: center;
+    padding: 12pt;
+    background-color: #181622;
+}
+
+nav a {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: rgb(24, 171, 251);
+    margin: 0 15px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    position: relative;
+    display: inline-block;
+}
+
+nav a:hover {
+    color: rgb(150, 216, 251)
+}
+
+main {
+    position: relative;
+    top: 100px;
+}
+
+footer {
+    margin-top: 300px;
+}
+
+form {
+    display: inline-block;
+    background-color: #181622;
+    border: solid #181622;
+    border-radius: 5px;
+    width: fit-content;
+    padding: 20pt;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    
+}
+
+form h1 {
+    color: rgb(24, 171, 251);
+    font-size: 20px;
+}
+
+form input {
+    color:#181622;
+    background-color: rgb(150, 216, 251);
+    margin: 5px;
+    padding: 10px;
+    border-color: #181622;
+    border-radius: 5px;
+    text-align: center;
+    
+}
+
+form #submit {
+    color: #181622;
+    background-color: rgb(24, 171, 251);
+}
+
+form #submit:hover {
+    color: rgb(24, 171, 251);
+    background-color: #181622;
+    border: solid rgb(24, 171, 251) 2px;
+}
+
+form a {
+    display: block;
+    text-decoration: none;
+    color: rgb(24, 171, 251);
+    font-size: 10px;
 }
