--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,12 +67,12 @@ form input {
     
 }
 
-form #submit {
+form #submitBtn {
     color: #181622;
     background-color: rgb(24, 171, 251);
 }
 
-form #submit:hover {
+form #submitBtn:hover {
     color: rgb(24, 171, 251);
     background-color: #181622;
     border: solid rgb(24, 171, 251) 2px;
@@ -83,4 +83,8 @@ form a {
     text-decoration: none;
     color: rgb(24, 171, 251);
     font-size: 10px;
+}
+
+form .user-error{
+    color: red;
 }
