--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/register">
+<form id="regForm" method="post" action="/register">
     <h1>Sign up</h1>
     <div>
         <input type="text" name="username" placeholder="Username">
@@ -12,7 +12,7 @@
     <div>
         <input type="password" name="confpass" placeholder="Confirm Password">
     </div>
-    <input id="submit" type="submit" value="Sign up">
+    <input id="submitBtn" type="submit" value="Sign up">
     <a href="/login">Already have an account?</a>
 </form>
 
