--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,6 +85,13 @@ form a {
     font-size: 10px;
 }
 
-form .user-error{
+form label {
+    color: rgb(24, 171, 251);
+    font-size: 6pt;
+    font-style: italic;
+}
+form p{
     color: red;
+    font-size: 6pt;
+    font-style: italic;
 }
