--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,16 +1,16 @@
 <form id="loginForm" method="post" action="/login">
-    <h1>Sign in</h1>
-    <div>
-        <input type="text" name="username" placeholder="Username">
-    </div>
-    <div>
-        <input type="password" name="password" placeholder="Password">
-    </div>
-
     <div>
         <p class="user-error" {{#unless error}}hidden="true"{{/unless}}>Invalid username or password!</p>
     </div>
-
+    <h1>Sign in</h1>
+    <label>Username</label>
+    <div>
+        <input id="username" type="text" name="username">
+    </div>
+    <label>Password</label>
+    <div>
+        <input id="password" type="password" name="password">
+    </div>
     <input id="submitBtn" type="submit" value="Sign in">
     <a href="/register">Not registered yet?</a>
 </form>
