--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,6 +17,7 @@ nav a {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     text-decoration: none;
+    font-weight: bold;
     color: rgb(24, 171, 251);
     margin: 0 15px;
     font-size: 16px;
@@ -27,6 +28,15 @@ nav a {
 
 nav a:hover {
     color: rgb(150, 216, 251)
+}
+
+#logo-link {
+    display: flex;
+}
+
+#logo-link img{
+    margin-top: -20px;
+    margin-bottom: -40px;
 }
 
 main {
@@ -48,7 +58,7 @@ form {
     font-family: 'Oswald', sans-serif;
     letter-spacing: 1px;
     text-transform: uppercase;
-    
+
 }
 
 form h1 {
@@ -57,14 +67,14 @@ form h1 {
 }
 
 form input {
-    color:#181622;
+    color: #181622;
     background-color: rgb(150, 216, 251);
     margin: 5px;
     padding: 10px;
     border-color: #181622;
     border-radius: 5px;
     text-align: center;
-    
+
 }
 
 form #submitBtn {
@@ -90,8 +100,46 @@ form label {
     font-size: 6pt;
     font-style: italic;
 }
-form p{
+
+form p {
     color: red;
     font-size: 6pt;
     font-style: italic;
+}
+
+.sidebar {
+    border: #181622 2px solid;
+    border-radius: 6px;
+    background-color: #181622;
+    width: fit-content;
+    display: inline-block;
+    padding: 10px;
+}
+
+.sidebar a {
+    display: inline;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: rgb(24, 171, 251);
+    margin: 10px;
+    padding: 8px;
+    font-size: 16px;
+}
+
+.sidebar a:hover {
+    background: rgba(24, 172, 251, 0.84);
+    color: #181622;
+    border: rgb(24, 171, 251);
+    border-radius: 12px;
+}
+
+.sidebar p {
+    margin-top: -16px; 
+    padding: 6px;
+    color: #181622;
+    font-size: 18px;
+    text-transform: uppercase;
+    border: #181622 2px solid;   
+    border-radius: 3px;
+    background: rgb(24, 171, 251);
 }
