--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/css/main.css">
+    <link rel="icon" href="static/images/car-logo.png">
     <script src="static/js/app.js" type="module"></script>
     <title>{{title}}</title>
 </head>
 <body>
     <header>
         <nav class="menu">
+            <a href="/" id="logo-link"><img src="../../static/images/car-logo.png" alt="site logo" width="100"></a>
             <a href="/listings">Listings</a>
             <a href="/create">Create</a>
             <a href="/about">About</a>
