Added css for listings page.

--- a/views/listings.hbs
+++ b/views/listings.hbs
@@ -1,18 +1,19 @@
-<div class="sidebar">
-    <p>What are you looking for?</p>
-    <a href="/listings/car">Cars</a>
-    <a href="/listings/truck">Trucks</a>
-    <a href="/listings/motorbike">Motorbikes</a>
-    <a href="/listings/rv">RVs</a>
-    <a href="/listings/boat">Boats</a>
-    <a href="/listings/exotic">Exotic</a>
-</div>
-<div class="listings-list">
-    <ul id="listings">
+<div class="listings">
+    <div class="sidebar">
+        <p>What are you looking for?</p>
+        <a href="/listings/car">Cars</a>
+        <a href="/listings/truck">Trucks</a>
+        <a href="/listings/motorbike">Motorbikes</a>
+        <a href="/listings/rv">RVs</a>
+        <a href="/listings/boat">Boats</a>
+        <a href="/listings/exotic">Exotic</a>
+    </div>
+    <ul>
         {{#each listings}}
-        <li>{{>listing}}</li>
+        <li class="list-item">{{>listing}}</li>
         {{else}}
         <p>no listings found</p>
         {{/each}}
     </ul>
+
 </div>
