--- a/views/partials/listing.hbs
+++ b/views/partials/listing.hbs
@@ -1,4 +1,15 @@
-<img src="{{imageUrl}}" alt="vehicle image">
-<p>{{creator.username}}</p>
-<p>{{vehicle.brand}}</p>
-
+<img src="{{imageUrl}}" alt="vehicle image" width="200px">
+<div>
+<p>User info:</p>
+<p>{{username}}</p>
+<p>{{phoneNo}}</p>
+</div>
+<div>
+<p>Vehicle info:</p>
+<p>{{brand}}</p>
+<p>{{model}}</p>
+<p>Seats: {{seats}}</p>
+<p>Doors: {{doors}}</p>
+<p>{{year}}</p>
+<p>Price-> {{price}}</p>
+</div>
