--- a/static/css/main.css
+++ b/static/css/main.css
@@ -107,6 +107,26 @@ form p {
     font-style: italic;
 }
 
+.listings{
+    display: flex;
+    align-content: flex-start;
+}
+
+.listings .list-item{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    margin: 10px;
+    background-color: #181622;
+    color: rgb(24, 171, 251);
+    border: #181622 2px solid;
+    border-radius: 4px;
+}
+
+.listings .list-item p {
+    font-size: 16px;
+    margin: 5px 70px;
+    
+}
 .sidebar {
     border: #181622 2px solid;
     border-radius: 6px;
@@ -114,16 +134,18 @@ form p {
     width: fit-content;
     display: inline-block;
     padding: 10px;
+    
 }
 
 .sidebar a {
-    display: inline;
+    display: flex;
     text-decoration: none;
     text-transform: uppercase;
     color: rgb(24, 171, 251);
     margin: 10px;
     padding: 8px;
     font-size: 16px;
+    
 }
 
 .sidebar a:hover {
@@ -143,3 +165,4 @@ form p {
     border-radius: 3px;
     background: rgb(24, 171, 251);
 }
+
