--- a/views/partials/listing.hbs
+++ b/views/partials/listing.hbs
@@ -1,15 +1,8 @@
 <img src="{{imageUrl}}" alt="vehicle image" width="200px">
-<div>
-<p>User info:</p>
-<p>{{username}}</p>
-<p>{{phoneNo}}</p>
-</div>
-<div>
-<p>Vehicle info:</p>
 <p>{{brand}}</p>
 <p>{{model}}</p>
-<p>Seats: {{seats}}</p>
-<p>Doors: {{doors}}</p>
 <p>{{year}}</p>
-<p>Price-> {{price}}</p>
-</div>
+<p>Price {{price}}</p>
+<a href="/listings/details/{{id}}">Details</a>
+
+
