--- a/views/register.hbs
+++ b/views/register.hbs
@@ -3,34 +3,34 @@
         <p class="user-error" {{#unless error}}hidden="true" {{/unless}}>{{error}}</p>
     </div>
     <h1>Sign up</h1>
-    <label>Username</label>
+    <label for="username">Username</label>
     <div>
         <input id="username" type="text" name="username">
     </div>
     <div>
         <p id="username-error" hidden="true">Username must be between 8 and 20 symbols!</p>
     </div>
-    <label>Email</label>
+    <label for="email">Email</label>
     <div>
         <input id="email" type="text" name="email">
     </div>
-    <label>First Name</label>
+    <label for="firstName">First Name</label>
     <div>
         <input id="firstName" type="text" name="firstName">
     </div>
-    <label>Last Name</label>
+    <label for="lastName">Last Name</label>
     <div>
         <input id="lastName" type="text" name="lastName">
     </div>
-    <label>Phone Number</label>
+    <label for="phoneNo">Phone Number</label>
     <div>
         <input id="phoneNo" type="text" name="phoneNo" placeholder="(###)###-####">
     </div>
-    <label>Password</label>
+    <label for="password">Password</label>
     <div>
         <input id="password" type="password" name="password">
     </div>
-    <label>Confirm Password</label>
+    <label for="confpass">Confirm Password</label>
     <div>
         <input id="confpass" type="password" name="confpass">
     </div>
