--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,11 +3,11 @@
         <p class="user-error" {{#unless error}}hidden="true"{{/unless}}>Invalid username or password!</p>
     </div>
     <h1>Sign in</h1>
-    <label>Username</label>
+    <label for="username">Username</label>
     <div>
         <input id="username" type="text" name="username">
     </div>
-    <label>Password</label>
+    <label for="password">Password</label>
     <div>
         <input id="password" type="password" name="password">
     </div>
